clusters/staging/outline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-dev
  namespace: outline
  annotations:
    kubernetes.io/ingress.class: traefik-traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: grafana-dev-selfsigned
spec:
  ingressClassName: traefik-traefik
  rules:
    - host: outline-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  number: 3000
  tls:
    - hosts:
        - outline-dev.local
      secretName: outline-dev-tls
